Authentication - login, logout

--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -14,6 +14,7 @@
             <li><a href="gview" target="_blank">gview</a> - Understanding how geneic views work</li>
             <li><a href="getpost">getpost</a>- Exploring HTTP get / post / redirect and HTML forms</li>
             <li><a href="session" target="_blank">session</a> - Cookies and session</li>
+            <li><a href="authz" target="_blank">authz</a> - Using Django login</li>
         </ul>
     </p>
 </body>
