--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -15,6 +15,7 @@
             <li><a href="getpost">getpost</a>- Exploring HTTP get / post / redirect and HTML forms</li>
             <li><a href="session" target="_blank">session</a> - Cookies and session</li>
             <li><a href="authz" target="_blank">authz</a> - Using Django login</li>
+            <li><a href="form" target="_blank" >form</a> - Using the Django forms library</li>
         </ul>
     </p>
 </body>
