--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -1,5 +1,8 @@
+{% load static %}
+
 <html>
 <head>
+    {% comment %} <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/> {% endcomment %}
     <title>{{ settings.APP_NAME }}</title>
 </head>
 <body>
@@ -16,6 +19,9 @@
             <li><a href="session" target="_blank">session</a> - Cookies and session</li>
             <li><a href="authz" target="_blank">authz</a> - Using Django login</li>
             <li><a href="form" target="_blank" >form</a> - Using the Django forms library</li>
+            <li><a href="autos" target="_blank" >autos</a> - Autos CRUD (
+                <a href="https://www.dj4e.com/assn/dj4e_autos.md" target="_blank" >Assignment</a>
+            )</li>
         </ul>
     </p>
 </body>
