Owning rows in a model

--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    {% comment %} <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/> {% endcomment %}
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     <title>{{ settings.APP_NAME }}</title>
 </head>
 <body>
@@ -22,6 +22,7 @@
             <li><a href="autos" target="_blank" >autos</a> - Autos CRUD (
                 <a href="https://www.dj4e.com/assn/dj4e_autos.md" target="_blank" >Assignment</a>
             )</li>
+            <li><a href="myarts" target="_blank">myarts</a> - Owning rows in a model</li>
         </ul>
     </p>
 </body>
