crispy -> crispy_forms and crispy_bootstrap

--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -23,6 +23,10 @@
                 <a href="https://www.dj4e.com/assn/dj4e_autos.md" target="_blank" >Assignment</a>
             )</li>
             <li><a href="myarts" target="_blank">myarts</a> - Owning rows in a model</li>
+            <li><a href="crispy" target="_blank">crispy</a> - Using Crispy forms and messages libraries
+                (<a href="https://django-crispy-forms.readthedocs.io/en/latest/install.html" target="_blank">Installation</a>,
+                <a href="https://django-crispy-forms.readthedocs.io/en/latest/filters.html" target="_blank">Crispy Filter</a>)
+            </li>        
         </ul>
     </p>
 </body>
