--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -26,7 +26,10 @@
             <li><a href="crispy" target="_blank">crispy</a> - Using Crispy forms and messages libraries
                 (<a href="https://django-crispy-forms.readthedocs.io/en/latest/install.html" target="_blank">Installation</a>,
                 <a href="https://django-crispy-forms.readthedocs.io/en/latest/filters.html" target="_blank">Crispy Filter</a>)
-            </li>        
+            </li>     
+            <li><a href="menu" target="_blank">menu</a> - Making a bootstrap nav bar
+                (<a href="https://getbootstrap.com/docs/3.3/components/#navbar" target="_blank">Bootstrap 3 Documentation</a>)
+            </li>   
         </ul>
     </p>
 </body>
