--- a/mysite/home/templates/registration/login.html
+++ b/mysite/home/templates/registration/login.html
@@ -1,10 +1,15 @@
+{% extends "base_bootstrap.html" %}
+
+{% block content %}
 {% if form.errors %}
     <p>Your username and password didn't match. Please try again</p>
 {% endif %}
-
+{% load crispy_forms_filters %}
+{% load crispy_forms_tags %}
 <form action="{% url 'login' %}" method="post">
     {% csrf_token %}
-    {{ form.as_p}}
+    {{ form|crispy }}
     <input type="submit" value="Login">
     <input type="hidden" name="next" value="{{ next }}">
 </form>
+{% endblock %}
