--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -30,6 +30,8 @@
             <li><a href="menu" target="_blank">menu</a> - Making a bootstrap nav bar
                 (<a href="https://getbootstrap.com/docs/3.3/components/#navbar" target="_blank">Bootstrap 3 Documentation</a>)
             </li>   
+            <li><a href="pics" target="_blank">pics</a> - Storing small images in the database</li>
+
         </ul>
     </p>
 </body>
