--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -31,6 +31,7 @@
                 (<a href="https://getbootstrap.com/docs/3.3/components/#navbar" target="_blank">Bootstrap 3 Documentation</a>)
             </li>   
             <li><a href="pics" target="_blank">pics</a> - Storing small images in the database</li>
+            <li><a href="forums" target="_blank">forums</a> - Many to many comment example</li>
 
         </ul>
     </p>
