Chat with AJAX, should use websockets instead

--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -32,6 +32,7 @@
             </li>   
             <li><a href="pics" target="_blank">pics</a> - Storing small images in the database</li>
             <li><a href="forums" target="_blank">forums</a> - Many to many comment example</li>
+            <li><a href="chat" target="_blank">chat</a> - A simple JSON Chat</li>
 
         </ul>
     </p>
