--- a/mysite/home/templates/base_bootstrap.html
+++ b/mysite/home/templates/base_bootstrap.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" 
+        crossorigin="anonymous"></script>
         
 </head>
 <body>
