--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -33,6 +33,8 @@
             <li><a href="pics" target="_blank">pics</a> - Storing small images in the database</li>
             <li><a href="forums" target="_blank">forums</a> - Many to many comment example</li>
             <li><a href="chat" target="_blank">chat</a> - A simple JSON Chat</li>
+            <li><a href="favs" target="_blank">favs</a> - A few of my favorite / favourite things</li>
+            <li><a href="well" target="_blank">well</a> - A multi-user blogging system</li>
 
         </ul>
     </p>
